--- a/src/assets/styles/views/bill.css
+++ b/src/assets/styles/views/bill.css
@@ -1,12 +1,13 @@
     .bill {
         display: flex;
         padding: 12px;
-        height: 100vh;
     }
     
     .bill-infor {
-        width: 80%;
+        width: 79%;
         height: 90%;
+        background-color: white;
+        margin-right: 1%
     }
     
     .bill-search {
@@ -22,20 +23,37 @@
     
     .bill-pay {
         width: 20%;
-        height: 90%;
+        height: 88vh;
         background-color: white;
-        border-radius: 4px
+        border-radius: 4px;
+        padding: 8px;
     }
     
-    #gridContainer {
-        height: 80vh;
+    .bill-pay h6 {
+        text-align: center;
+        margin: 10px 0;
+    }
+    
+    .bill-customer-search-list {
+        padding: 4px;
+        cursor: pointer;
         border-radius: 4px;
+    }
+    
+    .bill-pay .infor {
+        font-weight: 500;
+        margin: 8px 0;
+    }
+    
+    .bill-customer-search-list:hover {
+        background-color: rgb(212, 209, 209)
     }
     
     .bill-search-list {
         display: flex;
         cursor: pointer;
         padding: 4px;
+        border-radius: 4px;
         align-items: center;
     }
     
