--- a/src/assets/styles/component/field.css
+++ b/src/assets/styles/component/field.css
@@ -1,7 +1,7 @@
 .validate-icon {
     position: absolute;
-    top: 20%;
-    right: 35px;
+    bottom: 10%;
+    right: 60px;
     mask: url('~@/assets/img/icon.svg') no-repeat -242px -74px;
     width: 20px;
     height: 20px;
@@ -28,5 +28,17 @@
 }
 
 .error .dx-texteditor-container {
-    border: 1px solid #ec5504;
+    border-bottom: 1px solid #ec5504;
+}
+
+.dx-field-label {
+    float: none;
+    width: 100%;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.dx-field-value {
+    float: none;
+    width: 90%
 }
